--- a/angular.json
+++ b/angular.json
@@ -113,7 +113,7 @@
                     "options": {
                         "sourceMap": false,
                         "outputPath": "dist/server",
-                        "main": "server.ts",
+                        "main": "ssr/index.ts",
                         "tsConfig": "src/tsconfig.server.json"
                     },
                     "configurations": {
