--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build:static": "yarn build static --prod --base-href /static/",
     "build:500": "yarn build app-500 --prod --base-href /500/",
     "development": "yarn start",
+    "bundle-report-create": "yarn build:app --stats-json",
+    "bundle-report": "webpack-bundle-analyzer dist/app/stats.json",
     "e2e": "ng e2e",
     "lint": "ng lint",
     "lint:scss": "stylelint \"./src/**/*.scss\"",
@@ -65,6 +67,7 @@
     "d3": "^5.16.0",
     "express": "^4.15.2",
     "file-saver": "^2.0.2",
+    "global": "^4.4.0",
     "graphql": "^14.3.1",
     "graphql-tag": "^2.10.1",
     "latinize": "^0.4.1",
@@ -86,6 +89,7 @@
     "unorm": "^1.6.0",
     "uuid": "^3.3.3",
     "vanilla-text-mask": "^5.1.1",
+    "webpack-bundle-analyzer": "^4.4.2",
     "xml2js": "^0.4.23",
     "zone.js": "~0.10.2"
   },
