--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "file-saver": "^2.0.2",
     "graphql": "^14.3.1",
     "graphql-tag": "^2.10.1",
+    "html-entities": "^2.3.2",
     "latinize": "^0.4.1",
     "memory-cache": "^0.2.0",
     "moment": "^2.22.2",
