--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "apollo-link-error": "^1.1.12",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.1.0",
+    "compression": "^1.7.4",
     "core-js": "^2.5.7",
     "cron": "^1.8.2",
     "cross-fetch": "^3.0.4",
