--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "9.1.0",
     "@angular-devkit/build-angular": "~0.901.5",
     "@angular/cli": "9.1.5",
     "@angular/compiler-cli": "9.1.6",
@@ -106,6 +107,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "compression-webpack-plugin": "6.1.1",
     "domino": "^2.1.3",
     "husky": "^4.2.5",
     "jasmine-core": "~2.8.0",
