--- a/src/tsconfig.server.json
+++ b/src/tsconfig.server.json
@@ -2,7 +2,7 @@
     "extends": "../tsconfig.json",
     "compilerOptions": {
         "outDir": "../out-tsc/app",
-        "module": "commonjs"
+        "target": "es2016"
     },
     "angularCompilerOptions": {
         "entryModule": "src/app/app.server.module#AppServerModule"
