--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "allowSyntheticDefaultImports": true,
         "downlevelIteration": true,
         "importHelpers": true,
-        "module": "esnext",
+        "module": "es2020",
         "outDir": "./dist/out-tsc",
         "baseUrl": "./",
         "sourceMap": true,
@@ -12,7 +12,7 @@
         "moduleResolution": "node",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "target": "es5",
+        "target": "es2018",
         "typeRoots": [
             "node_modules/@types"
         ],
