--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.0",
     "@angular/animations": "10.2.5",
     "@angular/common": "10.2.5",
     "@angular/compiler": "10.2.5",
@@ -94,7 +95,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "9.1.0",
+    "@angular-builders/custom-webpack": "10.0.1",
     "@angular-devkit/build-angular": "~0.1002.3",
     "@angular/cli": "10.2.3",
     "@angular/compiler-cli": "10.2.5",
