apollo - apollo update success

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.2.0",
+    "@apollo/client": "^3.0.0",
     "@angular/animations": "10.2.5",
     "@angular/common": "10.2.5",
     "@angular/compiler": "10.2.5",
@@ -52,13 +52,7 @@
     "@ng-select/ng-select": "^5.1.0",
     "@nguniversal/express-engine": "^10.1.0",
     "@types/file-saver": "^2.0.0",
-    "apollo-angular": "^1.7.0",
-    "apollo-angular-link-http": "^1.8.0",
-    "apollo-cache-inmemory": "^1.6.3",
-    "apollo-client": "^2.6.4",
-    "apollo-link": "^1.2.12",
-    "apollo-link-batch-http": "^1.2.13",
-    "apollo-link-error": "^1.1.12",
+    "apollo-angular": "^2.6.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.1.0",
     "core-js": "^2.5.7",
@@ -68,8 +62,7 @@
     "d3": "^5.16.0",
     "express": "^4.15.2",
     "file-saver": "^2.0.2",
-    "graphql": "14.0.0",
-    "graphql-tag": "^2.10.1",
+    "graphql": "^15.0.0",
     "html-entities": "^2.3.2",
     "latinize": "^0.4.1",
     "memory-cache": "^0.2.0",
