--- a/angular.json
+++ b/angular.json
@@ -227,12 +227,11 @@
                             "src/assets/images/",
                             "src/assets/favicon.ico"
                         ],
-                        "extractCss": true,
                         "styles": [
                             "src/assets/scss/front.scss",
                             {
                                 "input": "src/assets/pdfjs/web/viewer.scss",
-                                "inject": false,
+                                "inject": true,
                                 "bundleName": "assets/pdfjs/web/viewer"
                             }
                         ],
@@ -249,7 +248,6 @@
                             "optimization": true,
                             "outputHashing": "all",
                             "sourceMap": false,
-                            "extractCss": true,
                             "namedChunks": false,
                             "aot": true,
                             "extractLicenses": true,
@@ -332,7 +330,6 @@
                             "optimization": true,
                             "outputHashing": "all",
                             "sourceMap": false,
-                            "extractCss": true,
                             "namedChunks": false,
                             "aot": true,
                             "extractLicenses": true,
