--- a/angular.json
+++ b/angular.json
@@ -114,18 +114,18 @@
                 "server": {
                     "builder": "@angular-devkit/build-angular:server",
                     "options": {
-                        "sourceMap": false,
                         "outputPath": "dist/server",
                         "main": "ssr/app.ts",
-                        "tsConfig": "src/tsconfig.server.json"
+                        "tsConfig": "src/tsconfig.server.json",
+                        "optimization": false
                     },
                     "configurations": {
                         "production": {
                             "outputHashing": "media",
-                            "sourceMap": false,
                             "optimization": true
                         }
-                    }
+                    },
+                    "defaultConfiguration": ""
                 },
                 "test": {
                     "builder": "@angular-devkit/build-angular:karma",
@@ -207,7 +207,6 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "aot": true,
                         "outputPath": "dist/static",
                         "index": "src/index.html",
                         "main": "src/static.ts",
@@ -235,7 +234,13 @@
                                 "bundleName": "assets/pdfjs/web/viewer"
                             }
                         ],
-                        "scripts": []
+                        "scripts": [],
+                        "vendorChunk": true,
+                        "extractLicenses": false,
+                        "buildOptimizer": false,
+                        "sourceMap": true,
+                        "optimization": false,
+                        "namedChunks": true
                     },
                     "configurations": {
                         "production": {
@@ -249,12 +254,12 @@
                             "outputHashing": "all",
                             "sourceMap": false,
                             "namedChunks": false,
-                            "aot": true,
                             "extractLicenses": true,
                             "vendorChunk": false,
                             "buildOptimizer": true
                         }
-                    }
+                    },
+                    "defaultConfiguration": ""
                 },
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
@@ -300,7 +305,6 @@
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
                     "options": {
-                        "aot": true,
                         "outputPath": "dist/500",
                         "index": "src/500/index.html",
                         "main": "",
@@ -317,7 +321,13 @@
                         "styles": [
                             "src/500/assets/scss/front.scss"
                         ],
-                        "scripts": []
+                        "scripts": [],
+                        "vendorChunk": true,
+                        "extractLicenses": false,
+                        "buildOptimizer": false,
+                        "sourceMap": true,
+                        "optimization": false,
+                        "namedChunks": true
                     },
                     "configurations": {
                         "production": {
@@ -331,12 +341,12 @@
                             "outputHashing": "all",
                             "sourceMap": false,
                             "namedChunks": false,
-                            "aot": true,
                             "extractLicenses": true,
                             "vendorChunk": false,
                             "buildOptimizer": true
                         }
-                    }
+                    },
+                    "defaultConfiguration": ""
                 },
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
