--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "license": "MIT",
   "scripts": {
     "build": "ng build",
-    "build:app": "yarn build --prod --output-hashing none",
+    "build:app": "yarn build --configuration production --output-hashing none",
     "build:preview": "yarn build -c preview",
-    "build:prod": "yarn build --prod",
-    "build:static": "yarn build static --prod --base-href /static/",
-    "build:500": "yarn build app-500 --prod --base-href /500/",
+    "build:prod": "yarn build --configuration production",
+    "build:static": "yarn build static --configuration production --base-href /static/",
+    "build:500": "yarn build app-500 --configuration production --base-href /500/",
     "development": "yarn start",
     "bundle-report-create": "yarn build:app --stats-json",
     "bundle-report": "webpack-bundle-analyzer dist/app/stats.json",
@@ -39,15 +39,15 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.0.0",
-    "@angular/animations": "11.2.14",
-    "@angular/common": "11.2.14",
-    "@angular/compiler": "11.2.14",
-    "@angular/core": "11.2.14",
-    "@angular/forms": "11.2.14",
-    "@angular/localize": "^11.2.14",
-    "@angular/platform-browser": "11.2.14",
-    "@angular/platform-browser-dynamic": "11.2.14",
-    "@angular/router": "11.2.14",
+    "@angular/animations": "12.2.12",
+    "@angular/common": "12.2.12",
+    "@angular/compiler": "12.2.12",
+    "@angular/core": "12.2.12",
+    "@angular/forms": "12.2.12",
+    "@angular/localize": "^12.2.12",
+    "@angular/platform-browser": "12.2.12",
+    "@angular/platform-browser-dynamic": "12.2.12",
+    "@angular/router": "12.2.12",
     "@auth0/angular-jwt": "^2.1.0",
     "@ng-select/ng-select": "^6.1.0",
     "@nguniversal/express-engine": "^11.1.0",
@@ -85,15 +85,15 @@
     "vanilla-text-mask": "^5.1.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "xml2js": "^0.4.23",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.1",
-    "@angular-devkit/build-angular": "~0.1102.15",
-    "@angular/cli": "11.2.15",
-    "@angular/compiler-cli": "11.2.14",
-    "@angular/language-service": "11.2.14",
-    "@angular/platform-server": "^11.2.14",
+    "@angular-devkit/build-angular": "~12.2.12",
+    "@angular/cli": "12.2.12",
+    "@angular/compiler-cli": "12.2.12",
+    "@angular/language-service": "12.2.12",
+    "@angular/platform-server": "^12.2.12",
     "@nguniversal/builders": "^9.1.0",
     "@types/d3": "^5.7.2",
     "@types/express": "^4.17.0",
@@ -119,7 +119,7 @@
     "ts-loader": "^5.3.3",
     "ts-node": "^8.0.3",
     "tslint": "~6.1.0",
-    "typescript": "4.0.8",
+    "typescript": "4.3.5",
     "webpack-cli": "^3.3.0"
   },
   "browser": {
