--- a/angular.json
+++ b/angular.json
@@ -11,7 +11,7 @@
             "schematics": {},
             "architect": {
                 "build": {
-                    "builder": "@angular-builders/custom-webpack:browser",
+                    "builder": "@angular-devkit/build-angular:browser",
                     "options": {
                         "aot": true,
                         "outputPath": "dist/app",
@@ -41,13 +41,10 @@
                             {
                                 "input": "src/assets/pdfjs/web/viewer.scss",
                                 "inject": false,
-                                "bundleName": "assets/pdfjs/web/viewer"
+                                "bundleName": "pdf-viewer"
                             }
                         ],
-                        "scripts": [],
-                        "customWebpackConfig": {
-                            "path": "./custom-webpack.config.js"
-                        }
+                        "scripts": []
                     },
                     "configurations": {
                         "production": {
@@ -231,7 +228,7 @@
                             {
                                 "input": "src/assets/pdfjs/web/viewer.scss",
                                 "inject": true,
-                                "bundleName": "assets/pdfjs/web/viewer"
+                                "bundleName": "pdf-viewer"
                             }
                         ],
                         "scripts": [],
