--- a/package.json
+++ b/package.json
@@ -38,19 +38,19 @@
   },
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.0.0",
-    "@angular/animations": "12.2.12",
-    "@angular/common": "12.2.12",
-    "@angular/compiler": "12.2.12",
-    "@angular/core": "12.2.12",
-    "@angular/forms": "12.2.12",
-    "@angular/localize": "^12.2.12",
-    "@angular/platform-browser": "12.2.12",
-    "@angular/platform-browser-dynamic": "12.2.12",
-    "@angular/router": "12.2.12",
+    "@angular/animations": "12.2.13",
+    "@angular/common": "12.2.13",
+    "@angular/compiler": "12.2.13",
+    "@angular/core": "12.2.13",
+    "@angular/forms": "12.2.13",
+    "@angular/localize": "^12.2.13",
+    "@angular/platform-browser": "12.2.13",
+    "@angular/platform-browser-dynamic": "12.2.13",
+    "@angular/router": "12.2.13",
+    "@apollo/client": "y^3.0.0",
     "@auth0/angular-jwt": "^2.1.0",
-    "@ng-select/ng-select": "^6.1.0",
-    "@nguniversal/express-engine": "^11.1.0",
+    "@ng-select/ng-select": "^7.3.0",
+    "@nguniversal/express-engine": "^12.1.3",
     "@types/file-saver": "^2.0.0",
     "apollo-angular": "^2.6.0",
     "body-parser": "^1.19.0",
@@ -88,12 +88,11 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "10.0.1",
-    "@angular-devkit/build-angular": "~12.2.12",
-    "@angular/cli": "12.2.12",
-    "@angular/compiler-cli": "12.2.12",
-    "@angular/language-service": "12.2.12",
-    "@angular/platform-server": "^12.2.12",
+    "@angular-devkit/build-angular": "~12.2.13",
+    "@angular/cli": "12.2.13",
+    "@angular/compiler-cli": "12.2.13",
+    "@angular/language-service": "12.2.13",
+    "@angular/platform-server": "^12.2.13",
     "@nguniversal/builders": "^9.1.0",
     "@types/d3": "^5.7.2",
     "@types/express": "^4.17.0",
@@ -104,7 +103,7 @@
     "compression-webpack-plugin": "6.1.1",
     "domino": "^2.1.3",
     "husky": "^4.2.5",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.7",
     "karma-chrome-launcher": "~3.1.0",
@@ -112,10 +111,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "node-fetch": "^2.6.0",
-    "node-sass": "^4.14.1",
     "nodemon": "^1.18.11",
     "protractor": "~7.0.0",
-    "rxjs-tslint": "0.1.5",
     "ts-loader": "^5.3.3",
     "ts-node": "^8.0.3",
     "tslint": "~6.1.0",
@@ -124,5 +121,8 @@
   },
   "browser": {
     "crypto": false
+  },
+  "resolutions": {
+    "webpack": "^5.0.0"
   }
 }
