--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,6 @@
                             "src/robots.txt",
                             "src/sitemap.xml"
                         ],
-                        "extractCss": true,
                         "styles": [
                             "src/assets/scss/front.scss",
                             {
@@ -57,7 +56,6 @@
                             "optimization": true,
                             "outputHashing": "all",
                             "sourceMap": false,
-                            "extractCss": true,
                             "namedChunks": false,
                             "aot": true,
                             "extractLicenses": true,
@@ -74,7 +72,6 @@
                             "optimization": true,
                             "outputHashing": "all",
                             "sourceMap": false,
-                            "extractCss": true,
                             "namedChunks": false,
                             "aot": true,
                             "extractLicenses": true,
@@ -208,7 +205,7 @@
                         "index": "src/index.html",
                         "main": "src/static.ts",
                         "polyfills": "src/polyfills.ts",
-                        "tsConfig": "src/tsconfig.app.json",
+                        "tsConfig": "src/tsconfig.static.json",
                         "assets": [
                             {
                                 "glob": "src/**/*.!(scss)",
