--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@angular/platform-browser": "12.2.13",
     "@angular/platform-browser-dynamic": "12.2.13",
     "@angular/router": "12.2.13",
-    "@apollo/client": "y^3.0.0",
+    "@apollo/client": "^3.4.16",
     "@auth0/angular-jwt": "^2.1.0",
     "@ng-select/ng-select": "^7.3.0",
     "@nguniversal/express-engine": "^12.1.3",
@@ -55,7 +55,7 @@
     "apollo-angular": "^2.6.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.1.0",
-    "core-js": "^2.5.7",
+    "core-js": "^3.19.1",
     "cron": "^1.8.2",
     "cross-fetch": "^3.0.4",
     "crypto-js": "^4.0.0",
@@ -81,7 +81,7 @@
     "tslib": "^2.0.0",
     "unfetch": "^4.1.0",
     "unorm": "^1.6.0",
-    "uuid": "^3.3.3",
+    "uuid": "^8.3.2",
     "vanilla-text-mask": "^5.1.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "xml2js": "^0.4.23",
@@ -116,8 +116,7 @@
     "ts-loader": "^5.3.3",
     "ts-node": "^8.0.3",
     "tslint": "~6.1.0",
-    "typescript": "4.3.5",
-    "webpack-cli": "^3.3.0"
+    "typescript": "4.3.5"
   },
   "browser": {
     "crypto": false
