--- a/package.json
+++ b/package.json
@@ -89,6 +89,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.13",
+    "@angular-eslint/builder": "12.6.1",
+    "@angular-eslint/eslint-plugin": "12.6.1",
+    "@angular-eslint/eslint-plugin-template": "12.6.1",
+    "@angular-eslint/schematics": "12.6.1",
+    "@angular-eslint/template-parser": "12.6.1",
     "@angular/cli": "12.2.13",
     "@angular/compiler-cli": "12.2.13",
     "@angular/language-service": "12.2.13",
@@ -99,9 +104,12 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
     "codelyzer": "^6.0.0",
     "compression-webpack-plugin": "6.1.1",
     "domino": "^2.1.3",
+    "eslint": "^7.26.0",
     "husky": "^4.2.5",
     "jasmine-core": "^3.7.1",
     "jasmine-spec-reporter": "~5.0.0",
@@ -116,7 +124,10 @@
     "ts-loader": "^5.3.3",
     "ts-node": "^8.0.3",
     "tslint": "~6.1.0",
-    "typescript": "4.3.5"
+    "typescript": "4.3.5",
+    "eslint-plugin-import": "latest",
+    "eslint-plugin-jsdoc": "latest",
+    "eslint-plugin-prefer-arrow": "latest"
   },
   "browser": {
     "crypto": false
