--- a/src/tsconfig.server.json
+++ b/src/tsconfig.server.json
@@ -7,6 +7,6 @@
     "angularCompilerOptions": {
         "entryModule": "src/app/app.server.module#AppServerModule"
     },
-    "files": ["app.server.ts", "../ssr/app.ts"],
+    "files": ["app.server.ts", "../ssr/prerender.ts"],
     "include": ["src/**/*.d.ts", "src/**/*.ts"]
 }
