--- a/src/tsconfig.prepare.json
+++ b/src/tsconfig.prepare.json
@@ -4,9 +4,6 @@
         "outDir": "../out-tsc/app",
         "target": "es2016"
     },
-    "angularCompilerOptions": {
-        "entryModule": "src/app/server/app.server.module#AppServerModule"
-    },
-    "files": ["../ssr/prerender.ts"],
+    "files": ["../ssr/prepare.ts"],
     "include": ["src/**/*.d.ts", "src/**/*.ts"]
 }
