--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,13 @@
 /dist*
 /tmp
 /out-tsc
-/prerender/dist
+/routes.txt
+/build-id.text
 
 # dependencies
 /node_modules
 /mock/node_modules
 /mock/package-lock.json
-/prerender/node_modules
 
 ### Vim ###
 # swap
