--- a/angular.json
+++ b/angular.json
@@ -112,7 +112,7 @@
                     "builder": "@angular-devkit/build-angular:server",
                     "options": {
                         "outputPath": "dist/server",
-                        "main": "ssr/prerender.ts",
+                        "main": "prerender/index.ts",
                         "tsConfig": "src/tsconfig.server.json",
                         "optimization": false
                     },
@@ -175,6 +175,22 @@
                     },
                     "configurations": {
                         "production": {}
+                    }
+                },
+                "generate-data-for-prerender": {
+                    "builder": "@angular-devkit/build-angular:server",
+                    "options": {
+                        "sourceMap": false,
+                        "outputPath": "dist/data",
+                        "main": "generate-data-for-prerender/app.ts",
+                        "tsConfig": "src/tsconfig.generate-data-for-prerender.json"
+                    },
+                    "configurations": {
+                        "production": {
+                            "outputHashing": "media",
+                            "sourceMap": false,
+                            "optimization": true
+                        }
                     }
                 }
             }
