--- a/src/tsconfig.generate-data-for-prerender.json
+++ b/src/tsconfig.generate-data-for-prerender.json
@@ -4,9 +4,8 @@
         "outDir": "../out-tsc/app",
         "target": "es2016"
     },
-    "angularCompilerOptions": {
-        "entryModule": "src/app/server/app.server.module#AppServerModule"
-    },
-    "files": ["../prerender/index.ts"],
+    "files": [
+        "../generate-data-for-prerender/app.ts"
+    ],
     "include": ["src/**/*.d.ts", "src/**/*.ts"]
 }
