PXEPR-1510-prerender styles for ang 14 edit, refactor and minor fix

--- a/angular.json
+++ b/angular.json
@@ -228,7 +228,7 @@
                             "src/assets/scss/front.scss",
                             {
                                 "input": "src/assets/pdfjs/web/viewer.scss",
-                                "inject": true,
+                                "inject": false,
                                 "bundleName": "pdf-viewer"
                             }
                         ],
