--- a/src/tsconfig.generate-data-for-prerender.json
+++ b/src/tsconfig.generate-data-for-prerender.json
@@ -4,6 +4,8 @@
         "outDir": "../out-tsc/app",
         "target": "es2016"
     },
-    "files": ["../generate-data-for-prerender/app.ts"],
+    "files": [
+        "./server/generate-data-for-prerender/app.ts"
+    ],
     "include": ["src/**/*.d.ts", "src/**/*.ts"]
 }
