--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Lundegaard Angular Devstack",
     "license": "MIT",
     "engines": {
-        "node": "^14.17"
+        "node": "^14.15"
     },
     "scripts": {
         "build": "ng build",
@@ -96,11 +96,11 @@
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~12.2.13",
-        "@angular-eslint/builder": "^13.0.1",
-        "@angular-eslint/eslint-plugin": "13.0.1",
-        "@angular-eslint/eslint-plugin-template": "13.0.1",
-        "@angular-eslint/schematics": "13.0.1",
-        "@angular-eslint/template-parser": "13.0.1",
+        "@angular-eslint/builder": "12.6.1",
+        "@angular-eslint/eslint-plugin": "12.6.1",
+        "@angular-eslint/eslint-plugin-template": "12.6.1",
+        "@angular-eslint/schematics": "12.6.1",
+        "@angular-eslint/template-parser": "12.6.1",
         "@angular/cli": "12.2.13",
         "@angular/compiler-cli": "12.2.13",
         "@angular/language-service": "12.2.13",
